[package]
name = "zeroblogmirrors"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = { version = "~0.22", features = ["rocket"] }
rocket = "~0.4"
chrono = "*"
clap = "*"
log = "~0.4"
pretty_env_logger = "~0.4"
serde = { version = "~1.0", features = [ "derive" ] }
serde_json = "~1.0"
notify = "4.0"
pulldown-cmark = "*"
ammonia = "*"
